<resources>
    <string name="app_name">Budget App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_icon_title">Icon title</string>
    <string name="button_add">Add</string>
    <string name="create_icon_header">Create new icon</string>
    <string name="create_icon_cost">Cost</string>
    <string name="shared_preferences">SHPreferences</string>
    <string name="purpose_null">Purpose</string>
    <string name="purpose_food">Food</string>
    <string name="purpose_transport">Transport</string>
    <string name="purpose_clothes">Clothes</string>
    <string name="purpose_other">Other</string>
    <string name="card_selection_warning">No card selected</string>
    <string name="icon_delete_text">Delete only icon or the whole transaction?</string>
    <string name="create_card_title">Card title</string>
    <string name="card_title_hint">Title</string>
    <string name="create_card_type">Select payment system</string>
    <string name="create_card_balance">Initialize balance</string>
    <string name="card_balance_hint">Balance</string>

    <string-array name="cards_spinner">
        <item>Cash</item>
        <item>Current card</item>
    </string-array>

</resources>
